; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_core.c_bfa_isr_reqq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_core.c_bfa_isr_reqq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_s = type { i32 }
%struct.list_head = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bfa_s*, i32)* @bfa_isr_reqq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfa_isr_reqq(%struct.bfa_s* %0, i32 %1) #0 {
  %3 = alloca %struct.bfa_s*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.list_head*, align 8
  store %struct.bfa_s* %0, %struct.bfa_s** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.bfa_s*, %struct.bfa_s** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @bfa_isr_reqq_ack(%struct.bfa_s* %6, i32 %7)
  %9 = load %struct.bfa_s*, %struct.bfa_s** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call %struct.list_head* @bfa_reqq(%struct.bfa_s* %9, i32 %10)
  store %struct.list_head* %11, %struct.list_head** %5, align 8
  %12 = load %struct.list_head*, %struct.list_head** %5, align 8
  %13 = call i32 @list_empty(%struct.list_head* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %19, label %15

15:                                               ; preds = %2
  %16 = load %struct.bfa_s*, %struct.bfa_s** %3, align 8
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @bfa_reqq_resume(%struct.bfa_s* %16, i32 %17)
  br label %19

19:                                               ; preds = %15, %2
  ret void
}

declare dso_local i32 @bfa_isr_reqq_ack(%struct.bfa_s*, i32) #1

declare dso_local %struct.list_head* @bfa_reqq(%struct.bfa_s*, i32) #1

declare dso_local i32 @list_empty(%struct.list_head*) #1

declare dso_local i32 @bfa_reqq_resume(%struct.bfa_s*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
